@@ -1,3 +1,4 @@
+2016-04-19 Added blocking wrong answers for editable gaps in Text module
 2016-04-22 Fixed tests in Crossword module
 2016-04-21 Added Color correct property in Coloring module
 2016-04-19 Added blocking wrong answers in Crossword module
